--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,16 +138,16 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            artifact: auroraview
-            archive: auroraview-linux-x64.tar.gz
+            artifact: auroraview-cli
+            archive: auroraview-cli-linux-x64.tar.gz
           - os: windows-latest
             target: x86_64-pc-windows-msvc
-            artifact: auroraview.exe
-            archive: auroraview-windows-x64.zip
+            artifact: auroraview-cli.exe
+            archive: auroraview-cli-windows-x64.zip
           - os: macos-latest
             target: aarch64-apple-darwin
-            artifact: auroraview
-            archive: auroraview-macos-arm64.tar.gz
+            artifact: auroraview-cli
+            archive: auroraview-cli-macos-arm64.tar.gz
 
     steps:
       - uses: actions/checkout@v6
