--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -273,6 +273,61 @@ jobs:
             echo "Screenshots updated and pushed"
           fi
 
+  # Build SDK for npm publishing (uses reusable workflow)
+  build-sdk:
+    name: SDK CI
+    needs: [release-please, check-tag]
+    if: |
+      always() &&
+      ((needs.release-please.result == 'success' && needs.release-please.outputs.release_created == 'true') ||
+       (needs.check-tag.result == 'success' && needs.check-tag.outputs.is_tag == 'true'))
+    uses: ./.github/workflows/sdk-ci.yml
+    secrets: inherit
+
+  # Publish SDK to npm
+  npm-publish:
+    name: Publish to npm
+    runs-on: ubuntu-latest
+    needs: [release-please, check-tag, build-sdk]
+    if: |
+      always() &&
+      ((needs.release-please.result == 'success' && needs.release-please.outputs.release_created == 'true') ||
+       (needs.check-tag.result == 'success' && needs.check-tag.outputs.is_tag == 'true')) &&
+      needs.build-sdk.result == 'success'
+    environment:
+      name: npm
+      url: https://www.npmjs.com/package/@auroraview/sdk
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          registry-url: 'https://registry.npmjs.org'
+
+      - name: Download SDK artifact
+        uses: actions/download-artifact@v6
+        with:
+          name: sdk-package
+          path: packages/auroraview-sdk/dist/
+
+      - name: Sync version from release tag
+        run: |
+          TAG_NAME="${{ needs.release-please.outputs.tag_name || needs.check-tag.outputs.tag_name }}"
+          # Extract version from tag (auroraview-v0.3.8 -> 0.3.8)
+          VERSION=$(echo "$TAG_NAME" | sed 's/auroraview-v//')
+          echo "Setting SDK version to: $VERSION"
+          cd packages/auroraview-sdk
+          npm version "$VERSION" --no-git-tag-version --allow-same-version
+
+      - name: Publish to npm
+        run: |
+          cd packages/auroraview-sdk
+          npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
   # Publish to PyPI - waits for either reused or built wheels
   pypi-publish:
     name: Publish to PyPI
