feat: add ipckit LocalSocket IPC support for high-performance subprocess communication
- Add ipckit dependency to auroraview-plugins for ProcessPlugin
- Implement spawn_ipc_channel command for LocalSocket-based IPC
- Add send_json command for structured JSON messaging
- Add Python IpcChannel client for subprocess communication
- Update gallery and examples with IPC channel support
- Add test coverage and debugging utilities

--- a/crates/auroraview-cli/Cargo.toml
+++ b/crates/auroraview-cli/Cargo.toml
@@ -74,6 +74,9 @@ rust-embed = "8.5"
 # Parallel processing
 rayon = "1.10"
 
+# IPC communication (for Python backend)
+ipckit = "0.1"
+
 [target.'cfg(windows)'.dependencies]
 # WebView2 COM bindings for warmup
 webview2-com = "0.37"
