--- a/Cargo.toml
+++ b/Cargo.toml
@@ -97,6 +97,7 @@ crossbeam-channel = "0.5"
 flume = "0.12"
 dashmap = "6.1"
 ipc-channel = { version = "0.20", optional = true }
+ipckit = "0.1"
 
 # CPU detection
 num_cpus = "1.16"
