fix(ci): add npm rebuild rollup to fix native module issue in CI
npm has a bug with optional dependencies that causes @rollup/rollup-linux-x64-gnu
to not be installed correctly. Running npm rebuild rollup after npm ci fixes this.

--- a/.github/workflows/sdk-ci.yml
+++ b/.github/workflows/sdk-ci.yml
@@ -47,6 +47,8 @@ jobs:
         run: |
           cd packages/auroraview-sdk
           npm ci
+          # Fix rollup native module issue (npm bug with optional deps)
+          npm rebuild rollup
 
       - name: Run type check
         run: |
@@ -76,6 +78,8 @@ jobs:
         run: |
           cd packages/auroraview-sdk
           npm ci
+          # Fix rollup native module issue (npm bug with optional deps)
+          npm rebuild rollup
 
       - name: Run unit tests
         run: |
@@ -101,6 +105,8 @@ jobs:
         run: |
           cd packages/auroraview-sdk
           npm ci
+          # Fix rollup native module issue (npm bug with optional deps)
+          npm rebuild rollup
 
       - name: Run tests with coverage
         run: |
@@ -143,6 +149,8 @@ jobs:
         run: |
           cd packages/auroraview-sdk
           npm ci
+          # Fix rollup native module issue (npm bug with optional deps)
+          npm rebuild rollup
 
       - name: Build SDK
         run: |
@@ -190,6 +198,8 @@ jobs:
         run: |
           cd packages/auroraview-sdk
           npm ci
+          # Fix rollup native module issue (npm bug with optional deps)
+          npm rebuild rollup
 
       - name: Build assets
         run: |
@@ -244,6 +254,8 @@ jobs:
         run: |
           cd packages/auroraview-sdk
           npm ci
+          # Fix rollup native module issue (npm bug with optional deps)
+          npm rebuild rollup
 
       - name: Install Playwright
         run: |
