--- a/.github/workflows/sdk-ci.yml
+++ b/.github/workflows/sdk-ci.yml
@@ -40,15 +40,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: packages/auroraview-sdk/package-lock.json
+          # Disable npm cache to avoid rollup native module issues
+          # cache: 'npm'
+          # cache-dependency-path: packages/auroraview-sdk/package-lock.json
 
       - name: Install dependencies
         run: |
           cd packages/auroraview-sdk
-          npm ci
-          # Fix rollup native module issue (npm bug with optional deps)
-          npm rebuild rollup
+          # Clean install to fix rollup native module issue (npm bug #4828)
+          rm -rf node_modules package-lock.json
+          npm install
 
       - name: Run type check
         run: |
@@ -71,15 +72,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-          cache-dependency-path: packages/auroraview-sdk/package-lock.json
+          # Disable npm cache to avoid rollup native module issues
+          # cache: 'npm'
+          # cache-dependency-path: packages/auroraview-sdk/package-lock.json
 
       - name: Install dependencies
         run: |
           cd packages/auroraview-sdk
-          npm ci
-          # Fix rollup native module issue (npm bug with optional deps)
-          npm rebuild rollup
+          # Clean install to fix rollup native module issue (npm bug #4828)
+          rm -rf node_modules package-lock.json
+          npm install
 
       - name: Run unit tests
         run: |
@@ -98,15 +100,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: packages/auroraview-sdk/package-lock.json
+          # Disable npm cache to avoid rollup native module issues
+          # cache: 'npm'
+          # cache-dependency-path: packages/auroraview-sdk/package-lock.json
 
       - name: Install dependencies
         run: |
           cd packages/auroraview-sdk
-          npm ci
-          # Fix rollup native module issue (npm bug with optional deps)
-          npm rebuild rollup
+          # Clean install to fix rollup native module issue (npm bug #4828)
+          rm -rf node_modules package-lock.json
+          npm install
 
       - name: Run tests with coverage
         run: |
@@ -142,15 +145,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: packages/auroraview-sdk/package-lock.json
+          # Disable npm cache to avoid rollup native module issues
+          # cache: 'npm'
+          # cache-dependency-path: packages/auroraview-sdk/package-lock.json
 
       - name: Install dependencies
         run: |
           cd packages/auroraview-sdk
-          npm ci
-          # Fix rollup native module issue (npm bug with optional deps)
-          npm rebuild rollup
+          # Clean install to fix rollup native module issue (npm bug #4828)
+          rm -rf node_modules package-lock.json
+          npm install
 
       - name: Build SDK
         run: |
@@ -191,15 +195,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: packages/auroraview-sdk/package-lock.json
+          # Disable npm cache to avoid rollup native module issues
+          # cache: 'npm'
+          # cache-dependency-path: packages/auroraview-sdk/package-lock.json
 
       - name: Install dependencies
         run: |
           cd packages/auroraview-sdk
-          npm ci
-          # Fix rollup native module issue (npm bug with optional deps)
-          npm rebuild rollup
+          # Clean install to fix rollup native module issue (npm bug #4828)
+          rm -rf node_modules package-lock.json
+          npm install
 
       - name: Build assets
         run: |
@@ -247,15 +252,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: packages/auroraview-sdk/package-lock.json
+          # Disable npm cache to avoid rollup native module issues
+          # cache: 'npm'
+          # cache-dependency-path: packages/auroraview-sdk/package-lock.json
 
       - name: Install SDK dependencies
         run: |
           cd packages/auroraview-sdk
-          npm ci
-          # Fix rollup native module issue (npm bug with optional deps)
-          npm rebuild rollup
+          # Clean install to fix rollup native module issue (npm bug #4828)
+          rm -rf node_modules package-lock.json
+          npm install
 
       - name: Install Playwright
         run: |
