fix(ci): use unique concurrency group for sdk-ci to avoid deadlock
When sdk-ci.yml is called via workflow_call, github.workflow becomes
the parent workflow name, causing concurrency group collision.

--- a/.github/workflows/sdk-ci.yml
+++ b/.github/workflows/sdk-ci.yml
@@ -24,7 +24,8 @@ permissions:
   contents: read
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  # Use unique group name to avoid deadlock when called via workflow_call
+  group: sdk-ci-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
