--- a/.github/workflows/sdk-ci.yml
+++ b/.github/workflows/sdk-ci.yml
@@ -23,10 +23,11 @@ on:
 permissions:
   contents: read
 
+# Only apply concurrency when triggered directly (not via workflow_call)
+# When called via workflow_call, the parent workflow manages concurrency
 concurrency:
-  # Use unique group name to avoid deadlock when called via workflow_call
-  group: sdk-ci-${{ github.event.pull_request.number || github.ref }}
-  cancel-in-progress: true
+  group: sdk-ci-${{ github.workflow }}-${{ github.event.pull_request.number || github.run_id }}
+  cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 
 jobs:
   # Type checking
@@ -323,7 +324,7 @@ jobs:
     name: SDK Ready
     runs-on: ubuntu-latest
     needs: [typecheck, unit-tests, coverage, build-package, build-assets, integration-gallery]
-    if: always()
+    if: always() && !cancelled()
     steps:
       - name: Check results
         run: |
@@ -345,6 +346,9 @@ jobs:
               echo "- ✅ $job" >> $GITHUB_STEP_SUMMARY
             elif [[ "$result" == "skipped" ]]; then
               echo "- ⏭️ $job (skipped)" >> $GITHUB_STEP_SUMMARY
+            elif [[ "$result" == "cancelled" ]]; then
+              echo "- ⚠️ $job (cancelled)" >> $GITHUB_STEP_SUMMARY
+              # Don't fail on cancelled - it means a newer run superseded this one
             else
               echo "- ❌ $job ($result)" >> $GITHUB_STEP_SUMMARY
               failed=1
