--- a/.github/workflows/sdk-ci.yml
+++ b/.github/workflows/sdk-ci.yml
@@ -304,15 +304,25 @@ jobs:
           name: sdk-package
           path: packages/auroraview-sdk/dist/
 
+      - name: Verify SDK dist exists
+        run: |
+          echo "SDK dist contents:"
+          ls -la packages/auroraview-sdk/dist/
+          test -f packages/auroraview-sdk/dist/react.js || (echo "ERROR: react.js not found" && exit 1)
+          test -f packages/auroraview-sdk/dist/react.d.ts || (echo "ERROR: react.d.ts not found" && exit 1)
+
       - name: Install Gallery dependencies
         run: |
           cd gallery
-          npm ci
+          # Use npm install to re-resolve file: dependency with pre-built SDK dist
+          rm -rf node_modules package-lock.json
+          npm install
 
       - name: Build Gallery with SDK
         run: |
           cd gallery
-          npm run build
+          # Skip TypeScript project references check since SDK is pre-built
+          npx vite build
 
       - name: Verify Gallery build
         run: |
