--- a/release-please-config.json
+++ b/release-please-config.json
@@ -21,6 +21,11 @@
           "type": "toml",
           "path": "pyproject.toml",
           "jsonpath": "$.project.version"
+        },
+        {
+          "type": "json",
+          "path": "packages/auroraview-sdk/package.json",
+          "jsonpath": "$.version"
         }
       ]
     }
