fix(ci): rename sdk-assets artifact in build-gallery.yml to avoid conflict
The build-gallery.yml workflow was using 'sdk-assets' as artifact name, which
conflicts with sdk-ci.yml when both are called from release.yml.

Renamed to 'gallery-sdk-assets' to avoid the conflict.

This issue was not caught in PR checks because build-gallery.yml is only
called during release, not during PR checks.

--- a/.github/workflows/build-gallery.yml
+++ b/.github/workflows/build-gallery.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Upload SDK assets artifact
         uses: actions/upload-artifact@v5
         with:
-          name: sdk-assets
+          name: gallery-sdk-assets
           path: |
             crates/auroraview-core/src/assets/js/core/
             crates/auroraview-core/src/assets/js/plugins/
@@ -78,7 +78,7 @@ jobs:
       - name: Download SDK assets
         uses: actions/download-artifact@v6
         with:
-          name: sdk-assets
+          name: gallery-sdk-assets
           path: crates/auroraview-core/src/assets/js/
 
       - name: Build Wheel
