--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -289,6 +289,8 @@ jobs:
       ((needs.release-please.result == 'success' && needs.release-please.outputs.release_created == 'true') ||
        (needs.check-tag.result == 'success' && needs.check-tag.outputs.is_tag == 'true'))
     uses: ./.github/workflows/sdk-ci.yml
+    with:
+      artifact-prefix: 'release-'
     secrets: inherit
 
   # Publish SDK to npm
@@ -316,7 +318,7 @@ jobs:
       - name: Download SDK artifact
         uses: actions/download-artifact@v6
         with:
-          name: sdk-package
+          name: release-sdk-package
           path: packages/auroraview-sdk/dist/
 
       - name: Sync version from release tag
