fix: auto-merge _core extension when bundling auroraview source
When include_paths contains auroraview source code (e.g., '../python'),
the packer now automatically merges the compiled _core.pyd/_core.so
extension from the installed wheel. This allows:

1. Local development with source code in include_paths
2. CI/CD builds with the same configuration
3. Both scenarios get the compiled Rust extension

Changes:
- Add merge_auroraview_core_module() to packer.rs
- Restore include_paths in gallery/auroraview.pack.toml
- Add packed executable startup test in PR checks

--- a/gallery/auroraview.pack.toml
+++ b/gallery/auroraview.pack.toml
@@ -51,7 +51,11 @@ enabled = true
 version = "3.10"
 entry_point = "main:run_gallery"
 packages = ["pyyaml"]  # Add any Python dependencies here
-include_paths = [".", "../python"]  # Include gallery directory and auroraview module
+# NOTE: When including "../python" (auroraview source code), the packer will
+# automatically merge the compiled _core.pyd/_core.so extension from the
+# installed auroraview wheel. This allows local development with source code
+# while ensuring the compiled Rust extension is included in the final package.
+include_paths = [".", "../python"]  # Include gallery directory and auroraview source
 exclude = ["*.pyc", "__pycache__", "*.egg-info", "tests", "node_modules", "dist", "pack-output"]
 optimize = 1
 
