--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -759,6 +759,106 @@ jobs:
             exit 1
           fi
 
+      # Test that the packed executable can start and Python backend initializes correctly
+      # This catches issues like missing _core.pyd that only manifest at runtime
+      - name: Test packed executable startup
+        if: runner.os == 'Windows'
+        shell: pwsh
+        timeout-minutes: 2
+        run: |
+          $exe = "target/pack/auroraview-gallery.exe"
+          Write-Host "Testing packed executable startup: $exe"
+          
+          # Start the process and capture output
+          $pinfo = New-Object System.Diagnostics.ProcessStartInfo
+          $pinfo.FileName = $exe
+          $pinfo.RedirectStandardError = $true
+          $pinfo.RedirectStandardOutput = $true
+          $pinfo.UseShellExecute = $false
+          $pinfo.CreateNoWindow = $true
+          
+          $process = New-Object System.Diagnostics.Process
+          $process.StartInfo = $pinfo
+          $process.Start() | Out-Null
+          
+          # Wait for startup (max 30 seconds)
+          $timeout = 30
+          $started = $false
+          $errorOutput = ""
+          
+          for ($i = 0; $i -lt $timeout; $i++) {
+            Start-Sleep -Seconds 1
+            
+            # Check if process exited with error
+            if ($process.HasExited) {
+              $errorOutput = $process.StandardError.ReadToEnd()
+              if ($process.ExitCode -ne 0) {
+                Write-Host "ERROR: Process exited with code $($process.ExitCode)"
+                Write-Host "Stderr: $errorOutput"
+                exit 1
+              }
+              break
+            }
+            
+            # Check for common startup errors in stderr
+            if ($process.StandardError.Peek() -ge 0) {
+              $errorOutput = $process.StandardError.ReadToEnd()
+              if ($errorOutput -match "No module named|ImportError|ModuleNotFoundError|_core") {
+                Write-Host "ERROR: Python import error detected:"
+                Write-Host $errorOutput
+                $process.Kill()
+                exit 1
+              }
+            }
+            
+            Write-Host "Waiting for startup... ($i/$timeout seconds)"
+          }
+          
+          # If still running after timeout, consider it a success and kill it
+          if (-not $process.HasExited) {
+            Write-Host "SUCCESS: Packed executable started and running"
+            $process.Kill()
+          }
+
+      - name: Test packed executable startup (Unix)
+        if: runner.os != 'Windows'
+        shell: bash
+        timeout-minutes: 2
+        run: |
+          exe="target/pack/auroraview-gallery"
+          echo "Testing packed executable startup: $exe"
+          
+          # Make executable
+          chmod +x "$exe"
+          
+          # Start process in background and capture stderr
+          "$exe" 2>&1 &
+          PID=$!
+          
+          # Wait for startup (max 30 seconds)
+          for i in {1..30}; do
+            sleep 1
+            
+            # Check if process is still running
+            if ! kill -0 $PID 2>/dev/null; then
+              wait $PID
+              EXIT_CODE=$?
+              if [ $EXIT_CODE -ne 0 ]; then
+                echo "ERROR: Process exited with code $EXIT_CODE"
+                exit 1
+              fi
+              break
+            fi
+            
+            echo "Waiting for startup... ($i/30 seconds)"
+          done
+          
+          # If still running, consider it a success
+          if kill -0 $PID 2>/dev/null; then
+            echo "SUCCESS: Packed executable started and running"
+            kill $PID 2>/dev/null || true
+          fi
+
       - name: Upload pack artifact
         uses: actions/upload-artifact@v5
         with:
