ci: add artifact-prefix to sdk-build to avoid conflicts

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -508,6 +508,8 @@ jobs:
   sdk-build:
     name: SDK CI
     uses: ./.github/workflows/sdk-ci.yml
+    with:
+      artifact-prefix: 'pr-'
     secrets: inherit
 
   # Gallery E2E tests with Playwright
