--- a/crates/auroraview-cli/Cargo.toml
+++ b/crates/auroraview-cli/Cargo.toml
@@ -24,7 +24,7 @@ path = "src/main.rs"
 auroraview-core = { path = "../auroraview-core" }
 
 # Pack functionality
-auroraview-pack = { path = "../auroraview-pack" }
+auroraview-pack = { path = "../auroraview-pack", features = ["code-protection"] }
 
 # Wry for WebView (direct dependency for CLI)
 wry = "0.53.5"
@@ -32,6 +32,10 @@ tao = "0.34.5"
 
 # CLI framework
 clap = { version = "4.5", features = ["derive"] }
+
+# Progress bars and spinners
+indicatif = "0.17"
+console = "0.15"
 
 # Error handling
 anyhow = "1.0"
